# scorphan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  ruff.toml
src/scorphan/: __init__.py  _preprocessing.py  _tools.py  _utils.py  aggregation.py  logging.py  processing.py  tools.py
